# wikimusic-ssr

./: .gitignore  .gitlab-ci.yml  Makefile  README.org  cabal.project  flake.nix  package-lock.json  package.json  stack.yaml  wikimusic-ssr.cabal
.github/workflows/: byggsteg.yaml  on-pull-request-byggsteg.yaml  on-push-to-trunk-byggsteg.yaml
app/: Main.hs
resources/config/: run-local.toml  run-production.toml
resources/css/: dark.css  light.css  main.css
resources/css/palettes/: green.css  mauve.css
src/: Principium.hs
src/WikiMusic/SSR/: Boot.hs  Config.hs  Language.hs  Prelude.hs
src/WikiMusic/SSR/Backend/: Rest.hs
src/WikiMusic/SSR/Clock/: LiveClock.hs
src/WikiMusic/SSR/Console/: Logger.hs
src/WikiMusic/SSR/Free/: Backend.hs  Clock.hs  Logger.hs  View.hs
src/WikiMusic/SSR/Model/: Api.hs  Config.hs  Env.hs
src/WikiMusic/SSR/Servant/: ApiSetup.hs  ApiSpec.hs  ArtistRoutes.hs  GenreRoutes.hs  LoginRoutes.hs  PreferenceRoutes.hs  SongRoutes.hs  Utilities.hs
src/WikiMusic/SSR/View/: ArtistHtml.hs  Css.hs  ErrorHtml.hs  GenreHtml.hs  Html.hs  HtmlUtil.hs  OtherHtml.hs  SongHtml.hs
src/WikiMusic/SSR/View/Classes/: Classes.hs
src/WikiMusic/SSR/View/Components/: DetailList.hs  Footer.hs  Forms.hs  Icons.hs  Other.hs  PageTop.hs
test/: Spec.hs
