cabal-version: 1.12

name:           wikimusic-ssr
version:        1.0.0.6
description:    Please see the README at <https://github.com/jjba23/wikimusic-ssr>
homepage:       https://github.com/jjba23/wikimusic-ssr
bug-reports:    https://github.com/jjba23/wikimusic-ssr/-/issues
author:         Josep Bigorra
maintainer:     Josep Bigorra <jjbigorra@gmail.com>
copyright:      2023 Josep Bigorra
license:        GPL-3
build-type:     Simple
license-file:   COPYING
                
extra-source-files:
    README.org
    
source-repository head
  type: git
  location: https://github.com/jjba23/wikimusic-ssr
  subdir: wikimusic-ssr

library
  exposed-modules:
      -- λ principium (beginning / prelude)
      Principium
      -- λ main
      WikiMusic.SSR.Config
      WikiMusic.SSR.Boot
      WikiMusic.SSR.Clock.LiveClock
      WikiMusic.SSR.Console.Logger
      WikiMusic.SSR.Model.Config
      WikiMusic.SSR.Model.Env
      WikiMusic.SSR.Model.Api
      WikiMusic.SSR.View.Components.PageTop
      WikiMusic.SSR.Free.Clock
      WikiMusic.SSR.Free.Logger
      WikiMusic.SSR.Free.View
      WikiMusic.SSR.Free.Backend
      WikiMusic.SSR.View.Html
      WikiMusic.SSR.View.HtmlUtil
      WikiMusic.SSR.View.ArtistHtml
      WikiMusic.SSR.View.GenreHtml
      WikiMusic.SSR.View.SongHtml
      WikiMusic.SSR.View.ErrorHtml
      WikiMusic.SSR.View.OtherHtml
      
      WikiMusic.SSR.View.Components.Forms
      WikiMusic.SSR.View.Components.Other
      WikiMusic.SSR.View.Components.Icons
      WikiMusic.SSR.View.Components.Footer
      WikiMusic.SSR.View.Components.DetailList
      WikiMusic.SSR.View.Classes.Classes      
      WikiMusic.SSR.Backend.Rest
      WikiMusic.SSR.Language
      WikiMusic.SSR.Servant.ApiSetup
      WikiMusic.SSR.Servant.ApiSpec
      WikiMusic.SSR.Servant.Utilities
      WikiMusic.SSR.Servant.PreferenceRoutes
      WikiMusic.SSR.Servant.LoginRoutes
      WikiMusic.SSR.Servant.ArtistRoutes
      WikiMusic.SSR.Servant.GenreRoutes
      WikiMusic.SSR.Servant.SongRoutes

  other-modules:
      Paths_wikimusic_ssr
  hs-source-dirs:
      src
  ghc-options: -Wall -threaded
  default-extensions:
      DataKinds
      DefaultSignatures
      DuplicateRecordFields
      EmptyDataDecls
      ExistentialQuantification
      FlexibleContexts
      FlexibleInstances
      FunctionalDependencies
      GADTs
      InstanceSigs
      KindSignatures
      LambdaCase
      MultiWayIf
      NamedFieldPuns
      NoImplicitPrelude
      OverloadedStrings
      PartialTypeSignatures
      RecordWildCards
      TypeFamilies
      ViewPatterns

  build-depends:
      aeson
    , async
    , base < 5
    , bytestring
    , keuringsdienst
    , keys
    , mtl
    , optics
    , optparse-applicative
    , relude
    , time
    , servant
    , servant-blaze
    , servant-server
    , servant-auth-server
    , servant-multipart
    , servant-client
    , prometheus-client
    , prometheus-metrics-ghc
    , wai-middleware-prometheus
    , text
    , containers
    , filepath
    , directory
    , uuid
    , wai
    , wai-logger
    , wai-cors
    , wai-extra
    , warp
    , base64-bytestring
    , neat-interpolation
    , HTTP
    , free-alacarte
    , tomland
    , blaze-html
    , blaze-markup
    , wikimusic-model-hs
    , wikimusic-api-spec
    , http-client
    , http-client-tls
    , base16-bytestring
  default-language: GHC2021

executable wikimusic-ssr-exe
  main-is: Main.hs
  other-modules:
      Paths_wikimusic_ssr
  hs-source-dirs:
      app
  ghc-options: -Wall -threaded -rtsopts "-with-rtsopts=-T -N"
  default-extensions:
      DataKinds
      DefaultSignatures
      DuplicateRecordFields
      EmptyDataDecls
      ExistentialQuantification
      FlexibleContexts
      FlexibleInstances
      FunctionalDependencies
      GADTs
      InstanceSigs
      KindSignatures
      LambdaCase
      MultiWayIf
      NamedFieldPuns
      NoImplicitPrelude
      OverloadedStrings
      PartialTypeSignatures
      RecordWildCards
      TypeFamilies
      ViewPatterns

  build-depends:
    base
    , relude
    , wikimusic-ssr
  default-language: GHC2021
